--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                     <li><a href="#edu">Education</a></li>
                     <li><a href="#experiences">Experiences</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -33,12 +32,11 @@
                     <h1>Sandip Thapa</h1>
                     <h4>Tech Enthusiast</h4>
                     <p>I am a Computer Science Graduate and frontend development enthusiast. Currently looking for new opportunities.</p>
-                    <!-- <ul>
-                        <li><i class="fa fa-envelope"></i><a href="mailto:">sandipthapa386@gmail.com</a></li>
-                        <li><i class="fa fa-phone"></i><a href="callto:">9808976977</a></li>
-                        <li><i class="fa fa-map-marker"></i><a href="#">Tinthana-14, Chandragiri</a></li>
-                    </ul>
-                     -->
+                    <ul>
+                        <li><a href="https://www.facebook.com/sandipthapa99" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                        <li><a href="https://github.com/sandipthapa99" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/sandipthapa99/" target="_blank"><i class="fa fa-linkedin"></i></a></li>                    </ul>
+                    
                 </div>
                 <div class="hero_child child_right">
                     <img src="images/image.jpg" alt="">
@@ -101,7 +99,7 @@
                 <h2>Experiences</h2>
             </div>
             <div class="container">
-                <div class="card">
+                <div class="card experience_card">
                     <div class="card_left">
                         <div class="inner_card">
                             <div class="innercard_content">
@@ -128,70 +126,104 @@
 
      <!-- Portfolio Section -->
      <section id="portfolio">
-            <div class="section_title">
-                <h2>Portfolio</h2>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="column">
-                        <div class="proj_card">
-                            <div class="projcard_content">
-                                <h3>eCommerce Website</h3>
-                                <p>An eCommerce website built as the major project during my internship period at Ekbana solutions.
-                                </p>
-                                <div class="proj_button">
-                                    <a href="https://react-supermarket-theme.herokuapp.com/" target="_blank">View Project</a>
-                                </div>
+        <div class="section_title">
+            <h2>Portfolio</h2>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <div class="proj_card">
+                        <div class="projcard_content">
+                            <h3>eCommerce Website</h3>
+                            <p>An eCommerce website built as the major project during my internship period at Ekbana solutions.
+                            </p>
+                            <div class="techs">
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>React</li>
+                                    <li>Bootstrap</li>
+                                </ul>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <div class="proj_card">
-                            <div class="projcard_content">
-                                <h3>Portfolio Website</h3>
-                                <p>
-                                    A personal portfolio website, showcasing my interests, knowledge, experiences, skills and projects that I have done.
-                                </p>
-                                <div class="proj_button">
-                                    <a href="https://www.sandipthapa.com.np/" target="_blank">View Project</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <div class="proj_card">
-                            <div class="projcard_content">
-                                <h3>Learn & Quiz</h3>
-                                <p>
-                                    Learn & Quiz is an e-learning web application which was initially a college project. As the project progressed, I wanted to try new things that were out of scope for college project.
-                                </p>
-                                <div class="proj_button">
-                                    <a href="https://github.com/sandipthapa99/Quiz-Web-App" target="_blank">View Project</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <div class="proj_card">
-                            <div class="projcard_content">
-                                <h3>Tic Tac Toe</h3>
-                                <p>
-                                    A GUI program built for Tic Tac Toe game using Python Tkinter. The program is developed as a multiplayer game rather than playing against the computer.
-                                </p>
-                                <div class="proj_button">
-                                    <a href="https://github.com/sandipthapa99/Tic-Tac-Toe-Python-GUI" target="_blank">View Project</a>
-                                </div>
+                            <div class="proj_button">
+                                <a href="https://react-supermarket-theme.herokuapp.com/" target="_blank">View Project</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="column">
+                    <div class="proj_card">
+                        <div class="projcard_content">
+                            <h3>Portfolio Website</h3>
+                            <p>
+                                A personal portfolio website, showcasing my interests, knowledge, experiences, skills and projects that I have done.
+                            </p>
+                            <div class="techs">
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>Bootstrap</li>
+                                </ul>
+                            </div>
+                            <div class="proj_button">
+                                <a href="https://www.sandipthapa.com.np/" target="_blank">View Project</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <div class="proj_card">
+                        <div class="projcard_content">
+                            <h3>Learn & Quiz</h3>
+                            <p>
+                                Learn & Quiz is an e-learning web application which was initially a college project. As the project progressed, I wanted to try new things that were out of scope for college project.
+                            </p>
+                            <div class="techs">
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>Django</li>
+                                </ul>
+                            </div>
+                            <div class="proj_button">
+                                <a href="https://github.com/sandipthapa99/Quiz-Web-App" target="_blank">View Project</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <div class="proj_card">
+                        <div class="projcard_content">
+                            <h3>Tic Tac Toe</h3>
+                            <p>
+                                A GUI program built for Tic Tac Toe game using Python Tkinter. The program is developed as a multiplayer game rather than playing against the computer.
+                            </p>
+                            <div class="techs">
+                                <ul>
+                                    <li>Python</li>
+                                    <li>Tkinter</li>
+                                </ul>
+                            </div>
+                            <div class="proj_button">
+                                <a href="https://github.com/sandipthapa99/Tic-Tac-Toe-Python-GUI" target="_blank">View Project</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <div class="copy">
+        <div class="container">
+            <p>&copy; 2022 Sandip Thapa</p>
+        </div>
+    </div>
 </body>
 </html>
