--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </div>
             <div class="container">
                 <div class="card">
-                    <div class="card_left">
+                    <div class="card_left edu_leftcard">
                         <img src="images/lesson.png" alt="">
                     </div>
-                    <div class="card_right">
+                    <div class="card_right edu_rightcard">
                         <div class="inner_card">
                             <div class="innercard_content">
                                 <h4>Bsc (Hons) Computer Science</h4>
@@ -100,7 +100,7 @@
             </div>
             <div class="container">
                 <div class="card experience_card">
-                    <div class="card_left">
+                    <div class="card_left exp_left">
                         <div class="inner_card">
                             <div class="innercard_content">
                                 <h4>Frontend Developer Internship</h4>
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card_right">
+                    <div class="card_right exp_right">
                         <img src="images/code.png" alt="">
                     </div>
                 </div>
