--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <!-- Navbar -->
     <nav>
         <div class="container">
-            <div class="nav_wrapper">
+            <div class="nav_wrapper" id="navbar">
                 <ul class="nav_ul">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#edu">Education</a></li>
                     <li><a href="#experiences">Experiences</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                      </a>
                 </ul>
             </div>
         </div>
