--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <li><a href="#edu">Education</a></li>
                     <li><a href="#experiences">Experiences</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
-                    <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                      </a> -->
                 </ul>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                  </a>
             </div>
         </div>
     </nav>
