--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
     <title>Portfolio</title>
 </head>
 <body>
     <!-- Navbar -->
     <nav>
         <div class="container">
-            <div class="nav_wrapper" id="navbar">
-                <ul class="nav_ul">
+            <div class="nav_wrapper">
+                <ul class="nav_ul" id="navbar">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#edu">Education</a></li>
                     <li><a href="#experiences">Experiences</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                 </ul>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
+                <a href="#" class="toggle_btn" onclick="myFunc();">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
                   </a>
             </div>
         </div>
@@ -228,5 +231,7 @@
             <p>&copy; 2022 Sandip Thapa</p>
         </div>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
