--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Cagtu | Careers">
+    <meta name="description" content="">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://careers.cagtu.com/">
+    <meta property="og:title" content="Career opportunities at Cagtu">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="images/meta.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://careers.cagtu.com/">
+    <meta property="twitter:title" content="Career opportunities at Cagtu">
+    <meta property="twitter:description" content="">
+    <meta property="twitter:image" content="images/meta.png">
+
     <title>Cagtu | Careers</title>
 </head>
 <body>
@@ -19,12 +37,12 @@
         <div class="container">
             <div class="nav_wrapper">
                 <div class="logo">
-                    <a href="#"><img src="images/logo-white.png" alt=""></a>
+                    <a href="https://cagtu.com/"><img src="images/logo-white.png" alt=""></a>
                 </div>
                 <div class="nav-links" id="nav-links">
                     <ul>
-                        <a href="index.html"><li>Home</li></a>
-                        <a href="#"><li>Career</li></a>
+                        <a href="https://cagtu.com/"><li>Home</li></a>
+                        <a href="https://careers.cagtu.com/"><li>Career</li></a>
                     </ul>
                 </div>
                 <div class="toggle">
@@ -37,8 +55,8 @@
             </div>
             <div class="nav-links-active-hide" id="nav-links-active-hide">
                 <ul>
-                    <a href="#"><li>Home</li></a>
-                    <a href="#"><li>Career</li></a>
+                    <a href="https://cagtu.com/"><li>Home</li></a>
+                    <a href="https://careers.cagtu.com/"><li>Career</li></a>
                 </ul>
             </div>
         </div>
@@ -134,8 +152,8 @@
                         <div class="fcolumn">
                             <h3>Quick Links</h3>
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="">Career</a></li>
+                                <li><a href="https://cagtu.com/">Home</a></li>
+                                <li><a href="https://careers.cagtu.com/">Career</a></li>
                             </ul>
                         </div>
                     </div>
