--- a/ui.html
+++ b/ui.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
+    <title>UI/UX Designer</title>
+    <meta name="title" content="UI/UX Designer">
+    <meta name="description" content="">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://careers.cagtu.com/ui.html">
+    <meta property="og:title" content="We are hiring UI/UX Designer">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="images/meta.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://careers.cagtu.com/ui.html">
+    <meta property="twitter:title" content="We are hiring UI/UX Designer">
+    <meta property="twitter:description" content="">
+    <meta property="twitter:image" content="images/meta.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/jobs.css">
@@ -14,10 +34,12 @@
 
     <script>
         function func(){
-            var x =document.URL;
-            document.getElementById("myframe").src = "https://www.facebook.com/plugins/share_button.php?href="+x+"&layout=button_count&size=small&width=94&height=20&appId"
+            var x = document.URL;
+            document.getElementById("fbFrame").src = "https://www.facebook.com/plugins/share_button.php?href="+x+"&layout=button&size=small&width=94&height=20&appId"
         }
     </script>
+    <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+    <script type="IN/Share" data-url="https://www.linkedin.com"></script>
 </head>
 <body onload="func()">
     <!-- Nav Bar -->
@@ -29,8 +51,8 @@
                 </div>
                 <div class="nav-links" id="nav-links">
                     <ul>
-                        <a href="index.html"><li>Home</li></a>
-                        <a href="index"><li>Career</li></a>
+                        <a href="https://cagtu.com/"><li>Home</li></a>
+                        <a href="https://careers.cagtu.com/"><li>Career</li></a>
                     </ul>
                 </div>
                 <div class="toggle">
@@ -43,8 +65,8 @@
             </div>
             <div class="nav-links-active-hide" id="nav-links-active-hide">
                 <ul>
-                    <a href="#"><li>Home</li></a>
-                    <a href="#"><li>Career</li></a>
+                    <a href="https://cagtu.com/"><li>Home</li></a>
+                    <a href="https://careers.cagtu.com/"><li>Career</li></a>
                 </ul>
             </div>
         </div>
@@ -93,16 +115,28 @@
                         <p>Job Location:<span>Kathmandu, Nepal</span></p>
                     </div>
                     <div class="back">
-                        <a href="index.html"><i class="fa fa-arrow-left"></i> Go back to listings</a>
+                        <a href="https://careers.cagtu.com/"><i class="fa fa-arrow-left"></i> Go back to listings</a>
                     </div>
                 </div>
                 <div class="form">
                     <div class="form-wrapper">
-                        <h2>How to Apply?</h2>
-                        <p>Please send us your resume at<a href="mailto:someone@yoursite.com"><strong>careers@cagtu.com</strong></a></p>
-                        <iframe id="myframe" src="" width="94" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>            </div>
+                        <h2>Join With Us</h2>
+                        <img src="images/resume.png" alt="">
+                        <p>Please send us your resume at<a href="mailto:careers@cagtu.com"><strong>careers@cagtu.com</strong></a></p>
+                        <!-- <p class="or">or</p> -->
+                        <!-- <input type="submit" value="Apply Now"> -->
 
-                        <!-- <img src="images/resume.png" alt=""> -->
+                        
+                        <div class="share">
+                            <p>Please Share:</p>
+                            <div class="frames">
+                                <iframe id="fbFrame" src="" width="94" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <div class="a2a_kit a2a_default_style">
+                                    <a class="a2a_button_linkedin_share" data-url="https://careers.cagtu.com/ui.html"></a>
+                                </div>
+                                <iframe id="twitterFrame" allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?size=medium" style="width:130px; height:20px;"></iframe>
+                            </div>
+                        </div>
                         <!-- <form id="my-form" action="https://formspree.io/f/mknyowde" method="POST">
                             <div class="name">
                                 <label for="fullname" name="fullname">Full name</label><span>*</span><br>
@@ -131,7 +165,6 @@
                             <input type="submit" value="Submit">
                           </form>                -->
                     </div>
-                    <iframe id="myframe" src="" width="94" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>            </div>
 
                 </div>
             </div>
@@ -145,8 +178,8 @@
                             <div class="fcolumn">
                                 <h3>Quick Links</h3>
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="">Career</a></li>
+                                    <li><a href="https://cagtu.com/">Home</a></li>
+                                    <li><a href="https://careers.cagtu.com/">Career</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -180,5 +213,7 @@
     </div> 
 
     <script src="js/nav.js"></script>
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
+
 </body>
 </html>
