--- a/react.html
+++ b/react.html
@@ -129,7 +129,7 @@ Experience: 2 years or more
                             <div class="frames">
                                 <iframe id="fbFrame" src="" width="94" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                                 <div class="a2a_kit a2a_default_style">
-                                    <a class="a2a_button_linkedin_share" data-url="https://careers.cagtu.com/ui.html"></a>
+                                    <a class="a2a_button_linkedin_share" data-url="https://careers.cagtu.com/react.html"></a>
                                 </div>
                                 <iframe id="twitterFrame" allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?size=medium" style="width:130px; height:20px;"></iframe>
                             </div>
