--- a/flutter.html
+++ b/flutter.html
@@ -134,7 +134,7 @@
                                 <div class="a2a_kit a2a_default_style">
                                     <a class="a2a_button_linkedin_share" data-url="https://careers.cagtu.com/flutter.html"></a>
                                 </div>
-                                <iframe id="twitterFrame" allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?size=medium" style="width:130px; height:20px;"></iframe>
+                                <a data-url="https://careers.cagtu.com/flutter.html" class="twitter-hashtag-button" data-show-count="false">Tweet</a>
                             </div>
                         </div>
                     </div>
@@ -186,6 +186,7 @@
 
     <script src="js/nav.js"></script>
     <script async src="https://static.addtoany.com/menu/page.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </body>
 </html>
