--- a/ui.html
+++ b/ui.html
@@ -130,11 +130,16 @@
                         <div class="share">
                             <p>Please Share:</p>
                             <div class="frames">
-                                <iframe id="fbFrame" src="" width="94" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                                <div class="a2a_kit a2a_default_style">
+                                <div class="fb-iframe">
+                                    <iframe id="fbFrame" src="" width="94" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
+                                </div>
+                                <div class="a2a_kit a2a_default_style linkedin-iframe">
                                     <a class="a2a_button_linkedin_share" data-url="https://careers.cagtu.com/ui.html"></a>
                                 </div>
-                                <iframe id="twitterFrame" allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?size=medium" style="width:130px; height:20px;"></iframe>
+                                <div class="twitter-iframe">
+                                    <a data-url="https://careers.cagtu.com/ui.html" class="twitter-hashtag-button" data-show-count="false">Tweet</a>
+                                </div>
                             </div>
                         </div>
                         <!-- <form id="my-form" action="https://formspree.io/f/mknyowde" method="POST">
@@ -214,6 +219,7 @@
 
     <script src="js/nav.js"></script>
     <script async src="https://static.addtoany.com/menu/page.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </body>
 </html>
